--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "3d-react-carousal": "^4.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "3d-react-carousal": "^4.0.2",
+    "firebase": "^9.6.1",
     "ityped": "^1.0.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
