--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "3d-react-carousal": "^4.0.2",
+    "emailjs-com": "^3.2.0",
     "firebase": "^9.6.1",
     "ityped": "^1.0.3",
     "node-sass": "^6.0.1",
